# Api/models/StatusCheckDto.cs
@@ -1,0 +1,3 @@
+public class StatusCheckDto {
+    public required string CommandVersion {get;set;}
+}
