# FrontEnd/api-spec.yaml
@@ -10,6 +10,10 @@ paths:
       responses:
         "200":
           description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/StatusCheckDto"
   /api/Soundcloud/soundcloud-data:
     post:
       tags:
@@ -28,6 +32,10 @@ paths:
       responses:
         "200":
           description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ScMetadataDto"
   /api/Soundcloud/download-audio:
     post:
       tags:
@@ -46,6 +54,31 @@ paths:
       responses:
         "200":
           description: OK
+          content:
+            audio/opus:
+              schema:
+                type: string
+                format: binary
+            audio/flac:
+              schema:
+                type: string
+                format: binary
+            audio/m4a:
+              schema:
+                type: string
+                format: binary
+            audio/mpeg:
+              schema:
+                type: string
+                format: binary
+            audio/ogg:
+              schema:
+                type: string
+                format: binary
+            audio/wav:
+              schema:
+                type: string
+                format: binary
   /api/Youtube/status:
     get:
       tags:
@@ -53,6 +86,10 @@ paths:
       responses:
         "200":
           description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/StatusCheckDto"
   /api/Youtube/youtube-data:
     post:
       tags:
@@ -71,6 +108,10 @@ paths:
       responses:
         "200":
           description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/YtMetadataDto"
   /api/Youtube/download-audio:
     post:
       tags:
@@ -89,6 +130,31 @@ paths:
       responses:
         "200":
           description: OK
+          content:
+            audio/opus:
+              schema:
+                type: string
+                format: binary
+            audio/flac:
+              schema:
+                type: string
+                format: binary
+            audio/m4a:
+              schema:
+                type: string
+                format: binary
+            audio/mpeg:
+              schema:
+                type: string
+                format: binary
+            audio/ogg:
+              schema:
+                type: string
+                format: binary
+            audio/wav:
+              schema:
+                type: string
+                format: binary
 components:
   schemas:
     MetadataRequestDto:
@@ -125,6 +191,38 @@ components:
           type: string
           nullable: true
       additionalProperties: false
+    ScMetadataDto:
+      required:
+        - thumbnail
+        - thumbnails
+        - title
+        - uploader
+      type: object
+      properties:
+        uploader:
+          type: string
+          nullable: true
+        thumbnail:
+          type: string
+          nullable: true
+        thumbnails:
+          type: array
+          items:
+            type: string
+          nullable: true
+        title:
+          type: string
+          nullable: true
+      additionalProperties: false
+    StatusCheckDto:
+      required:
+        - commandVersion
+      type: object
+      properties:
+        commandVersion:
+          type: string
+          nullable: true
+      additionalProperties: false
     YtDownloadRequestDto:
       required:
         - album
@@ -151,6 +249,23 @@ components:
           type: string
           nullable: true
         fileExtension:
+          type: string
+          nullable: true
+      additionalProperties: false
+    YtMetadataDto:
+      required:
+        - channel
+        - thumbnail
+        - title
+      type: object
+      properties:
+        channel:
+          type: string
+          nullable: true
+        thumbnail:
+          type: string
+          nullable: true
+        title:
           type: string
           nullable: true
       additionalProperties: false
